--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
 
     <!-- VERSION SECTION -->
     <div class="version">
-        <h5>ver. Apr 7, 2022</h5>
+        <h5>ver. Apr 8, 2022</h5>
     </div>  
       
     <!-- SELECTION AREA -->
@@ -109,12 +109,11 @@
         <div id="memberData"></div>
         <!-- MEMBERS CERTIFIED FOR THIS MACHINE -->
         <!-- last, first (nick)  member ID -->
-        <table style="margin:auto">
-            <caption style="caption-side:top;text-align:center">
-                Richard (Dick) Hartley
+        <!-- <table id='contactTable' style="margin:auto">
+            <caption id="contactTableCaption" style="caption-side:top;text-align:center">
             </caption>
-            
-            <tr>
+        <tbody id="contactTableBody"></tbody>     -->
+            <!-- <tr>
                 <td>Home phone:  </td>
                 <td style="text-align:right">352-391-7894</td>
             </tr>
@@ -125,8 +124,8 @@
             <tr>
                 <td>Email:  </td>
                 <td style="text-align:right">hartl1r@gmail.com</td>
-            </tr>
-        </table>
+            </tr> -->
+        <!-- </table> -->
 
         <!-- MEMBER DATA -->
         <!-- last, first (nick)  member ID -->
