--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -13,7 +13,7 @@
     .parent {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 40px 30px 30px 30px 30px 30px auto;
+        grid-template-rows: 40px 30px 30px 30px 30px 30px 1fr;
         grid-template-areas:"hdgArea" 
                             "versionArea"
                             "locationsArea"
@@ -90,14 +90,16 @@
 
     #machineSection {
         grid-area:detailArea;
-        background-color: lightcoral;
+        
         border:2px solid black;
         padding-top:10px;
         margin-top:10px;
-        display:none;
+        width:300px;
+        margin:auto;
+        /* display:none; */
     }
     #machineInstructorsAndMembers {
-        display:none;
+        /* display:none; */
         padding-top:20px;
     }
 
@@ -107,11 +109,12 @@
     }
     #memberSection {
         grid-area:detailArea;
-        background-color: lightblue;
-        border:2px solid black;
+        /* border:2px solid black; */
         padding-top:10px;
         margin-top:10px;
-        display:none;
+        width:300px;
+        margin:auto;
+        /* display:none; */
     }
     .memberName {
         margin-left:30px;
@@ -124,7 +127,9 @@
         border:2px solid black;
         padding-top:10px;
         margin-top:10px;
-        display:none;
+        width:500px;
+        margin:auto;
+        /* display:none; */
     }
     #instructorData {
         margin-left:100px;
@@ -233,9 +238,10 @@
 @media (min-width: 992px) {
     .parent {
         width:100%;
+        height: 100%;
         display: grid;
         grid-template-columns:1fr 1fr 1fr 1fr;
-        grid-template-rows: 50px 30px 600px;
+        grid-template-rows: 50px 30px 1fr;
         grid-template-areas:"hdgArea hdgArea hdgArea versionArea"
                             "locationsArea machinesArea membersArea instructorsArea" 
                             ".detail1Area detail2Area detail3Area";
@@ -326,23 +332,19 @@
         background-color: lightgreen;
         border:2px solid black;
         padding-top:10px;
+        margin:auto;
         margin-top:10px;
         display:block;
     }
-    .contactInfo {
-        border-color: blue;
-        border-radius: 10%;
-        background-color: lightgray;
+    #instructorMachines {
+        border:1px solid black;
+        /* margin-left:30px;
+        margin-right:0px;
+        padding-bottom: 200px; */
     }
-    .contactLabel {
-        display:inline-block;
-        width:150px;
-        text-align:right;
-        background-color: lightgray;
-        color:black;
+
+    .instrMachRow {
+        padding-left:30px;
     }
-    .contactData {
-        background-color:lightgray;
-        color:blue;
-    }
+    
 }
