--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -114,6 +114,7 @@
         margin-top:10px;
         width:300px;
         margin:auto;
+        font-size:small;
         /* display:none; */
     }
     .memberName {
@@ -221,7 +222,9 @@
     #memberSelected {
         width:300px;
     }
-
+    #memberSection {
+        font-size:medium;
+    }
     .instructors {
         grid-area:instructorsArea;
         padding-top:0px;
@@ -326,7 +329,12 @@
         padding-top:10px;
         margin-top:10px;
         display:block;
+        font-size:large;
+        width:400px;
     }
+    /* #memberData {
+        width:100%;
+    } */
     #instructorSection {
         grid-area:detail3Area;
         background-color: lightgreen;
