--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,6 +37,7 @@
         <!-- <label for="machineSelected">Machine data: </label> -->
         <select 
             id='machineSelected' 
+            class="selectpicker"
             title='Select a machine ...' 
             data-live-search=true 
             data-live-search-style="contains" 
@@ -60,7 +61,7 @@
         <!-- <label for="memberSelected">Member data: </label> -->
         <select 
             id='memberSelected' 
-            class='memberSelection' 
+            class='memberSelection selectpicker' 
             title='Select a member ...' 
             data-live-search=true 
             data-live-search-style="contains" 
@@ -82,7 +83,7 @@
         <!-- <label for="instructorSelected">Instructor data: </label> -->
         <select 
             id='instructorSelected' 
-            class='instructorSelection' 
+            class='instructorSelection selectpicker' 
             title='Select an instructor ...' 
             data-live-search=true 
             data-live-search-style="contains" 
