--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,166 +9,39 @@
 
 <div class="parent">
     <!-- HEADING SECTION -->
-    <div class="heading">
-        <h2>Machine Certification</h2>
+    <div id="heading">
+        <h2 style="text-align:center">Machine Request</h2>
+        <h3>Apr 10, 2022</h3>
     </div>
-
-    <!-- VERSION SECTION -->
-    <div class="version">
-        <h5>ver. Apr 8, 2022</h5>
-    </div>  
-      
-    <!-- SELECTION AREA -->
     
-    <!-- locations -->
-    <div class="locations">
-        <form class = "filterItems ">
-            <label for="shopChoice">Location: </label>
-            <select id="shopChoice" name="shopList" style="height:25px; width:150px; font-size: 1em;">
-                <option id="both" value="BOTH" >Both</option>
-                <option id='RA' value="RA">Rolling Acres</option>
-                <option id='BW' value="BW">Brownwood</option>
-            </select>
+    <!-- SELECTION AREA -->
+    <div id="villageIDsection">
+        <form action="" class="form-wrapper">
+            <input id="memberID" type="text" maxlength="6" width=200px>
         </form>
     </div>
-
-    <!--list of machines -->
-    <div class="machines">
-        <!-- <label for="machineSelected">Machine data: </label> -->
-        <select 
-            id='machineSelected' 
-            title='Select a machine ...' 
-            data-live-search=true 
-            data-live-search-style="contains" 
-            data-width='auto'>
-            <option class="optMachines" value="">Select a machine ...</option>
-            {% for m in machineList %}
-                console.log({{m.machineDisplayName}})
-                <option 
-                    class="optMachineName" 
-                    data-machineID={{m.machineID}} 
-                    data-location={{m.machineLocation}} 
-                    value='{{m.machineDisplayName}}'>
-                    {{m.machineDisplayName}}
-                </option>
-            {% endfor %}
-        </select>
-    </div>
-
-    <!--list of members -->
-    <div class="members" >
-        <!-- <label for="memberSelected">Member data: </label> -->
-        <select 
-            id='memberSelected' 
-            class='memberSelection' 
-            title='Select a member ...' 
-            data-live-search=true 
-            data-live-search-style="contains" 
-            data-width='auto'>
-            <option class="optMembers" value="">Select a member ...</option>
-            {% for mbr in memberList %}
-                <option  
-                    class="optMembers" 
-                    data-villageid={{mbr.villageID}}
-                    value={{mbr.memberDisplayName}}>
-                    {{mbr.memberDisplayName}}
-                </option>
-            {% endfor %}
-        </select>
-    </div>
     
-     <!--List of instructors -->
-     <div class="instructors" >
-        <!-- <label for="instructorSelected">Instructor data: </label> -->
-        <select 
-            id='instructorSelected' 
-            class='instructorSelection' 
-            title='Select an instructor ...' 
-            data-live-search=true 
-            data-live-search-style="contains" 
-            data-width='auto'>
-            <option class="optInstructors" value="">Select an instructor ...</option>
-            {% for i in instructorList %}
-                <option  
-                    class="optinstructors" 
-                    data-villageID={{i.villageID}}
-                    value={{i.instructorDisplayName}}>
-                    {{i.instructorDisplayName}}
-                </option>
-            {% endfor %}
-        </select>
-    </div>
-
-    <div id="machineSection">
-        <div style="text-align:center">MACHINE SECTION</div>
-        <div id="machineInstructorsAndMembers"></div>
-    </div>
-
+    
     <div id="memberSection">
-        <div style="text-align:center">MEMBER SECTION</div>
         <div id="memberData"></div>
         <!-- MEMBERS CERTIFIED FOR THIS MACHINE -->
-        <!-- last, first (nick)  member ID -->
-        <!-- <table id='contactTable' style="margin:auto">
-            <caption id="contactTableCaption" style="caption-side:top;text-align:center">
-            </caption>
-        <tbody id="contactTableBody"></tbody>     -->
-            <!-- <tr>
-                <td>Home phone:  </td>
-                <td style="text-align:right">352-391-7894</td>
-            </tr>
-            <tr>
-                <td>Mobile phone:  </td>
-                <td style="text-align:right">352-391-7894</td>
-            </tr>
-            <tr>
-                <td>Email:  </td>
-                <td style="text-align:right">hartl1r@gmail.com</td>
-            </tr> -->
-        <!-- </table> -->
-
-        <!-- MEMBER DATA -->
-        <!-- last, first (nick)  member ID -->
-        <!-- home phone -->
-        <!-- mobile phone -->
-        <!-- email -->
-
-        <!-- LIST ALL MACHINES WITH CHECKBOX FOR MEMBER IS CERTIFIED -->
-        <!-- checkbox    machineID    machineDesc    machineLocation -->
-    </div>  
-    
-    <div id="instructorSection">
-        <div style="text-align:center">INSTRUCTOR SECTION</div>
-        <div id="instructorData"></div>
-        <!-- MEMBERS OF machineCertificationStaff -->
-        <!-- last, first (nick)  member ID -->
-
-        <!-- INSTRUCTOR DATA -->
-        <!-- last, first (nick)  member ID -->
-        <!-- home phone -->
-        <!-- mobile phone -->
-        <!-- email -->
-        <div id="instructorMachines"></div>
-            <!-- <br> -->
-            <!-- <div class="row">
-                <div class="col-3">Can Certify</div>
-                <div class="col-5">Machine</div>
-                <div class="col-1">Location</div>
-            </div>
-            <br> -->
-            <!-- <div id="instructorMachinesDetail"> -->
-                <!-- <div class="row">
-                    <input class='col-3 canCertify' type="checkbox" checked>
-                    <div class="col-5 clsMachineDesc">Sample (E000000)</div>
-                    <div class="col-1 clsMachineLocation">BW</div>
-                    <div id='E000000' class="clsMachineID" style="display:none">E000000</div>
-                </div> -->
-
-            <!-- </div> -->
+        <div id="memberName">sample name</div>
         
-        <!-- LIST ALL MACHINES WITH CHECKBOX FOR WHICH INSTRUCTOR MAY CERTIFY -->
-        <!-- checkbox    machineID    machineDesc    machineLocation -->
-    </div>  
+
+        <!-- LIST ALL MACHINES WHERE MEMBER IS CERTIFIED -->
+        <!-- SELECT   machineDesc  machineLocation -->
+    </div> 
+    <div class="machineSection">
+        <div style="text-align:center">Select a machine:</div>
+        <div id="machinesCertified">
+            <div>machine 1</div>
+            <div>machine 2</div>
+        </div>
+    
+    <div id="footer">
+        <button id="cancelBtn">CANCEL</button>
+    </div>
+    </div>
 </div>  <!-- END OF PARENT WRAPPER -->
 
 
