--- a/app/static/css/ticket.css
+++ b/app/static/css/ticket.css
@@ -1,7 +1,7 @@
 
 
-/* Phone layout (default) */
-@media only screen and (max-width: 600px) {
+/* Tablet portrait layout (default) */
+@media only screen and (min-width: 768px){
     body {
         background-color: var(--main-body-bg-color);
         height: 100%;
@@ -9,7 +9,7 @@
 }
     .parent {
         display: grid;
-        width:100%;
+        width:25%;
         height:100%;
         grid-template-columns: 1fr;
         grid-template-rows: 100px 200px 100px;
@@ -29,7 +29,6 @@
         color: black;
     }
 
-    
     #ticketBody {
         grid-area:ticketBodyArea;
         color:black;
@@ -60,133 +59,4 @@
 }
 .modal-body {
     overflow: scroll;
-}
-
-/* iPad portrait */
-@media (min-width: 768px) {
-    .parent {
-        width:100%;
-        height:100%;
-        display: grid;
-        grid-template-columns:1fr;
-        grid-template-rows: 100px 100px 100px 200px auto;
-        grid-template-areas: "hdgArea"
-                             "villageIDArea"
-                             "nameArea"
-                             "machinesArea"
-                             "footerArea";                        
-        gap:0px;
-        margin:0 0;         
-    }
-
-    .heading {
-        grid-area: hdgArea;
-        display:grid;
-        padding-top: 0px;
-        padding-bottom:0px;
-        padding-left:20px;
-        text-align: left;
-        background-color:navy;
-        color: var(--main-txt-color);
-        border-bottom:white 3px;
-    }
-
-    #nameSection {
-        grid-area:nameArea;
-        font-size:2rem;
-        text-align:center;
-        padding-top:7px;
-        padding-right:20px;
-    }
-    #memberName {
-        color:blue;
-        font-size:1em;
-    }
-
-    #machinesSection {
-        grid-area:machinesArea;
-        /* height:100%; */
-        padding-top:10px;
-        margin-top:10px;
-        width:80%;
-        margin:auto;
-    }
-    .selectBtn {
-        font-size:0.75em;
-        padding-top:2px;
-        margin-left:200px;
-        margin-right:30px;
-    }
-
-    .machineDesc {
-        font-size: 1em;
-    }
-  
-}
-
-/* Laptop to monitor size */
-@media (min-width: 992px) {
-    .parent {
-        width:100%;
-        height: 100%;
-        display: grid;
-        grid-template-columns:1fr;
-        grid-template-rows: 100px 100px 100px 200px auto;
-        grid-template-areas:"hdgArea"
-                            "villageIDArea"
-                            "nameArea"
-                            "machinesArea"
-                            "footerArea";                  
-        gap:0px;
-        background-color:lightgray;
-        top:0; bottom:0; left:0; right:0;
-        /* border:4px solid red; */
-    }
-    .heading {
-        grid-area: hdgArea;
-        padding-top: 0px;
-        padding-bottom:0px;
-        padding-left:10px;
-        text-align: left;
-        background-color:navy;
-        color: var(--main-txt-color);
-        border-bottom:white 3px;
-    }
-
-    #nameSection {
-        grid-area:nameArea;
-        font-size:.75rem;
-        padding-top:5px;
-        padding-right:10px;
-        align-items: center;
-        text-align: right;
-    }
-
-    #memberName {
-        padding-top: 3px;
-        color:blue;
-        font-size:3em;
-    }
-
-    #machinesSection {
-        grid-area:machinesArea;
-        background-color: lightgoldenrodyellow;
-        border:2px solid black;
-        padding-top:10px;
-        margin-top:10px;
-        display:block;
-    }
-    .selectBtn {
-        font-size:0.75em;
-        padding-top:2px;
-        margin-left:400px;
-        margin-right:30px;
-        margin-top:4px;
-        height:30px;
-        font-size:1rem;
-    }
-
-    .machineDesc {
-        font-size: 1.5em;
-    }
 }
