--- a/app/templates/certifiedMachines.html
+++ b/app/templates/certifiedMachines.html
@@ -63,26 +63,31 @@
     </div>
     
     <div id="ticketBody">
-        <div class="row">
+        <div class="row" style="text-align:center">
             <div id=ticketName class="col-12">Name</div>
         </div>
-        <div class="row">
+        <div class="row" style="text-align:center;font-weight: 400;">
             <div id=ticketMachineDesc class="col-12">machine desc</div>
         </div>
         <div class="row"></div>
-        <div class="row">
-            <div id=ticketMachineID class="col-12">
-                Key for machine # - machine ID
-            </div>
-            <div id="ticketBody">
-                
+        <div class="row" style="text-align:center">
+            <div id=ticketMachineID class="col-12"></div>
+            <div id="ticketBodyDetail">
+                <!-- IF KEYS ARE KEPT IN THE TOOL CRIB -->
+                <!-- MESSAGE TO PICK UP KEY IN TOOL CRIB -->
+
+                <!-- IF KEY PROVIDERS ARE BEING USED, INSTRUCTIONS ... -->
+                <!-- LIST OF KEY PROVIDERS -->
+
+                <!-- IF NOT AUTHORIZED THEN INSTRUCTIONS FOR CONTACTING MACHINE ASSISTANTS -->
+                <!-- LIST OF MACHINE ASSISTANTS -->
             </div>
         </div>
     </div>
     <div id="ticketFooter">
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-12" style="text-align:center">Please select PRINT</div>
-        </div>
+        </div> -->
     </div>
 </div>
 
