--- a/app/static/css/certifiedMachines.css
+++ b/app/static/css/certifiedMachines.css
@@ -211,7 +211,9 @@ background-color: #4e9ed4;
         padding-right:20px;
         border:1px solid navy;
     }
-    
+    .expired {
+        text-decoration: line-through;
+    }
     #footer {
         grid-area: footerArea;
         width:100%;
