--- a/app/static/css/certifiedMachines.css
+++ b/app/static/css/certifiedMachines.css
@@ -278,6 +278,10 @@ background-color: #4e9ed4;
         
         /* display:none; */
     }
+    .msgLines {
+        text-align: center;
+        margin:auto;
+    }
     .msgLine1 {
         text-align: center;
         font-size:1rem;
@@ -285,6 +289,9 @@ background-color: #4e9ed4;
     .msgLine2 {
         text-align: center;
         font-size:1rem;
+    }
+    .listOfNames {
+        border:1px solid black;
     }
     .kpRow {
         margin-left:15px;
