--- a/app/static/css/certifiedMachines.css
+++ b/app/static/css/certifiedMachines.css
@@ -297,11 +297,11 @@ background-color: #4e9ed4;
         margin-left:15px;
     }
     .kpName {
-        font-size: 1.25rem;
+        font-size: 1rem;
         text-align: left;
     }
     .kpInShopNow {
-        font-size: 1rem;
+        font-size: .75rem;
         text-align: left;
     }
     #ticketFooter {
