June 7, 2022 1946 highlight expired

--- a/app/static/css/certifiedMachines.css
+++ b/app/static/css/certifiedMachines.css
@@ -219,6 +219,7 @@ background-color: #4e9ed4;
     }
     .expired {
         text-decoration: line-through;
+        background-color: yellow;
     }
     
     #footer {
