--- a/app/static/css/certifiedMachines.css
+++ b/app/static/css/certifiedMachines.css
@@ -243,10 +243,10 @@ background-color: #4e9ed4;
 
     .ticket {
         display: grid;
-        width:40%;
+        width:100%;
         height:100%;
         grid-template-columns: 1fr;
-        grid-template-rows: 100px 1fr 100px;
+        grid-template-rows: 100px auto 100px;
         grid-template-areas:"hdgArea"
                             "ticketBodyArea"
                             "footerArea";
@@ -277,19 +277,20 @@ background-color: #4e9ed4;
         margin:auto;
         font-size: 2rem;
         
+        
         /* display:none; */
     }
     .msgLines {
-        text-align: center;
+        border:3px solid fuchsia;
         margin:auto;
     }
     .msgLine1 {
-        text-align: center;
-        font-size:1rem;
+        border:1px solid red;
+        font-size:2rem;
     }
     .msgLine2 {
-        text-align: center;
-        font-size:1rem;
+        background-color: yellow;
+        font-size:2rem;
     }
     .listOfNames {
         border:1px solid black;
