Jun 21, 2022 1326 ESCPOS added

--- a/app/static/css/certifiedMachines.css
+++ b/app/static/css/certifiedMachines.css
@@ -177,6 +177,9 @@ background-color: #4e9ed4;
         color:white;
         width:100%;
     }
+    .setPrintChoice {
+        float:right;
+    }
     tbody {
         padding-top:20px;
        
