--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,13 @@
 
 	<div id="location">
 		<div id='locationID' style="font-size:2rem;text-align: center;">Rolling Acres</div>	
-		<button id="changeLocation" class="btn btn-sm btn-secondary" onclick="shopLocationChange()">Click to change location</button>
+			<button id="changeLocation" class="btn btn-sm btn-secondary" onclick="shopLocationChange()">Click to change location</button>
+		</div>
+		<!-- <div id="printOptionID">
+			<button id="changePrtChoice" class="btn btn-sm btn-secondary" onclick="prtChoiceChange()">Click to change print option</button>
+			<label id="printOptionSelectedID " for="printOptionSelected"></label>
+		</div> -->
+		
 	</div>
     
 	<div id="notFoundID" >{{notFoundMsg}}</div>
