Jun 21, 2022 1425 ticket page

--- a/app/templates/certifiedMachines.html
+++ b/app/templates/certifiedMachines.html
@@ -33,6 +33,9 @@
                         <td>
                             <button class="btn btn-sm btn-primary escposBtn" onclick="printViaESCPOS('{{c.machineID}}')">ESCPOS</button>
                         </td>
+                        <td>
+                            <button class="btn btn-sm btn-primary prtTicketPageBtn" onclick="printTicketPage('{{c.machineID}}')">ESCPOS</button>
+                        </td>
                         <td width="250" >{{c.machineDesc}}</td>
                         <!-- <td id = "A{{c.machineID}}">{{c.certifiedMsg}}</td> -->
                         {% if c.authorizationExpired %}
