Jun 21, 2022 1427 ticket page

--- a/app/templates/certifiedMachines.html
+++ b/app/templates/certifiedMachines.html
@@ -34,7 +34,7 @@
                             <button class="btn btn-sm btn-primary escposBtn" onclick="printViaESCPOS('{{c.machineID}}')">ESCPOS</button>
                         </td>
                         <td>
-                            <button class="btn btn-sm btn-primary prtTicketPageBtn" onclick="printTicketPage('{{c.machineID}}')">ESCPOS</button>
+                            <button class="btn btn-sm btn-primary prtTicketPageBtn" onclick="printTicketPage('{{c.machineID}}')">PAGE</button>
                         </td>
                         <td width="250" >{{c.machineDesc}}</td>
                         <!-- <td id = "A{{c.machineID}}">{{c.certifiedMsg}}</td> -->
